# triangulation

./: .gitignore  Cargo.toml  README.md
application/: Cargo.toml
application/src/: application.rs  lib.rs  settings.rs
graph/: Cargo.toml
graph/benches/: bench.rs  delaunay.rs  voronoi.rs
graph/src/: delaunator.rs  delaunay.rs  graph.rs  lib.rs  point.rs  voronoi.rs
image/: Cargo.toml
image/src/: drawable.rs  lib.rs  to_image.rs
launcher/: Cargo.toml
launcher/src/: main.rs  settings.rs
settings/: debug.toml  release.toml
