[package]
name = "graph"
version = "0.1.0"
authors = ["Nico"]
edition = "2018"

[features]
default = []
use-rayon = ["rayon"]

[dependencies]
either = "1.5"
nalgebra = "0.16"
rand = "0.6"
rayon = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.2.9"

[[bench]]
name = "delaunay"
harness = false

[[bench]]
name = "voronoi"
harness = false
