[package]
name = "graph"
version = "0.1.0"
authors = ["Nico"]
edition = "2018"

[features]
default = []
use-rayon = ["rayon"]

[dependencies]
either = "1.6"
nalgebra = "0.29"
rand = "0.8"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "delaunay"
harness = false

[[bench]]
name = "voronoi"
harness = false
